module_2/part_1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGINTABLE
    CLOSEDATA
    CLOSEDIV
    CLOSEROW
    CLOSETABLE
    CLOSEUL
    GARBAGE
    OPENDATA
    OPENDIV
    OPENROW
    OPENTABLE
    OPENUL

Grammar

Rule 0     S' -> start
Rule 1     start -> handleheader dataCell
Rule 2     start -> handleheader dataLI
Rule 3     start -> empty
Rule 4     dataContent -> CONTENT
Rule 5     dataContent -> CONTENT CONTENT
Rule 6     dataContent -> CONTENT CONTENT CONTENT
Rule 7     dataContent -> CONTENT CONTENT CONTENT CONTENT
Rule 8     dataContent -> CONTENT CONTENT CONTENT CONTENT CONTENT
Rule 9     dataContent -> CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
Rule 10    dataContent -> CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
Rule 11    reLI -> dataContent dataHREF reLI
Rule 12    reLI -> dataHREF dataContent reLI
Rule 13    reLI -> <empty>
Rule 14    dataLI -> OPENLI reLI CLOSELI dataLI
Rule 15    dataLI -> <empty>
Rule 16    skiptag -> OPENHREF skiptag
Rule 17    skiptag -> CLOSEHREF skiptag
Rule 18    skiptag -> CONTENT skiptag
Rule 19    skiptag -> empty
Rule 20    dataSpan -> OPENSPAN CLOSESPAN
Rule 21    dataSpan -> OPENSPAN dataContent CLOSESPAN
Rule 22    dataSpan -> OPENSPAN
Rule 23    dataSpan -> CLOSESPAN
Rule 24    dataHREF -> OPENHREF dataContent CLOSEHREF
Rule 25    dataHREF -> OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
Rule 26    dataHREF -> OPENHREF dataSpan CLOSEHREF
Rule 27    dataCell -> OPENPARA dataContent dataHREF dataContent dataHREF CLOSEPARA
Rule 28    dataCell -> OPENPARA dataContent dataHREF CLOSEPARA
Rule 29    dataCell -> <empty>
Rule 30    handleheader -> OPENH2 dataSpan dataSpan dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH2
Rule 31    handleheader -> OPENH3 OPENSPAN CONTENT CLOSESPAN dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH3
Rule 32    empty -> <empty>

Terminals, with rules where they appear

BEGINTABLE           : 
CLOSEDATA            : 
CLOSEDIV             : 
CLOSEH2              : 30
CLOSEH3              : 31
CLOSEHREF            : 17 24 25 26
CLOSELI              : 14
CLOSEPARA            : 27 28
CLOSEROW             : 
CLOSESPAN            : 20 21 23 31
CLOSETABLE           : 
CLOSEUL              : 
CONTENT              : 4 5 5 6 6 6 7 7 7 7 8 8 8 8 8 9 9 9 9 9 9 10 10 10 10 10 10 10 18 25 25 25 31
GARBAGE              : 
OPENDATA             : 
OPENDIV              : 
OPENH2               : 30
OPENH3               : 31
OPENHREF             : 16 24 25 26
OPENLI               : 14
OPENPARA             : 27 28
OPENROW              : 
OPENSPAN             : 20 21 22 31
OPENTABLE            : 
OPENUL               : 
error                : 

Nonterminals, with rules where they appear

dataCell             : 1
dataContent          : 11 12 21 24 27 27 28
dataHREF             : 11 12 27 27 28 30 31
dataLI               : 2 14
dataSpan             : 26 30 30 30 30 30 30 31 31 31 31
empty                : 3 19
handleheader         : 1 2
reLI                 : 11 12 14
skiptag              : 16 17 18
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . handleheader dataCell
    (2) start -> . handleheader dataLI
    (3) start -> . empty
    (30) handleheader -> . OPENH2 dataSpan dataSpan dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH2
    (31) handleheader -> . OPENH3 OPENSPAN CONTENT CLOSESPAN dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH3
    (32) empty -> .

    OPENH2          shift and go to state 4
    OPENH3          shift and go to state 5
    $end            reduce using rule 32 (empty -> .)

    start                          shift and go to state 1
    handleheader                   shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> handleheader . dataCell
    (2) start -> handleheader . dataLI
    (27) dataCell -> . OPENPARA dataContent dataHREF dataContent dataHREF CLOSEPARA
    (28) dataCell -> . OPENPARA dataContent dataHREF CLOSEPARA
    (29) dataCell -> .
    (14) dataLI -> . OPENLI reLI CLOSELI dataLI
    (15) dataLI -> .

  ! reduce/reduce conflict for $end resolved using rule 15 (dataLI -> .)
    OPENPARA        shift and go to state 8
    OPENLI          shift and go to state 9
    $end            reduce using rule 15 (dataLI -> .)

  ! $end            [ reduce using rule 29 (dataCell -> .) ]

    dataCell                       shift and go to state 6
    dataLI                         shift and go to state 7

state 3

    (3) start -> empty .

    $end            reduce using rule 3 (start -> empty .)


state 4

    (30) handleheader -> OPENH2 . dataSpan dataSpan dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH2
    (20) dataSpan -> . OPENSPAN CLOSESPAN
    (21) dataSpan -> . OPENSPAN dataContent CLOSESPAN
    (22) dataSpan -> . OPENSPAN
    (23) dataSpan -> . CLOSESPAN

    OPENSPAN        shift and go to state 11
    CLOSESPAN       shift and go to state 12

    dataSpan                       shift and go to state 10

state 5

    (31) handleheader -> OPENH3 . OPENSPAN CONTENT CLOSESPAN dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH3

    OPENSPAN        shift and go to state 13


state 6

    (1) start -> handleheader dataCell .

    $end            reduce using rule 1 (start -> handleheader dataCell .)


state 7

    (2) start -> handleheader dataLI .

    $end            reduce using rule 2 (start -> handleheader dataLI .)


state 8

    (27) dataCell -> OPENPARA . dataContent dataHREF dataContent dataHREF CLOSEPARA
    (28) dataCell -> OPENPARA . dataContent dataHREF CLOSEPARA
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT

    CONTENT         shift and go to state 15

    dataContent                    shift and go to state 14

state 9

    (14) dataLI -> OPENLI . reLI CLOSELI dataLI
    (11) reLI -> . dataContent dataHREF reLI
    (12) reLI -> . dataHREF dataContent reLI
    (13) reLI -> .
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (24) dataHREF -> . OPENHREF dataContent CLOSEHREF
    (25) dataHREF -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (26) dataHREF -> . OPENHREF dataSpan CLOSEHREF

    CLOSELI         reduce using rule 13 (reLI -> .)
    CONTENT         shift and go to state 15
    OPENHREF        shift and go to state 19

    reLI                           shift and go to state 16
    dataContent                    shift and go to state 17
    dataHREF                       shift and go to state 18

state 10

    (30) handleheader -> OPENH2 dataSpan . dataSpan dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH2
    (20) dataSpan -> . OPENSPAN CLOSESPAN
    (21) dataSpan -> . OPENSPAN dataContent CLOSESPAN
    (22) dataSpan -> . OPENSPAN
    (23) dataSpan -> . CLOSESPAN

    OPENSPAN        shift and go to state 11
    CLOSESPAN       shift and go to state 12

    dataSpan                       shift and go to state 20

state 11

    (20) dataSpan -> OPENSPAN . CLOSESPAN
    (21) dataSpan -> OPENSPAN . dataContent CLOSESPAN
    (22) dataSpan -> OPENSPAN .
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT

  ! shift/reduce conflict for CLOSESPAN resolved as shift
    CLOSESPAN       shift and go to state 21
    OPENSPAN        reduce using rule 22 (dataSpan -> OPENSPAN .)
    CLOSEHREF       reduce using rule 22 (dataSpan -> OPENSPAN .)
    OPENHREF        reduce using rule 22 (dataSpan -> OPENSPAN .)
    CLOSEH2         reduce using rule 22 (dataSpan -> OPENSPAN .)
    CLOSEH3         reduce using rule 22 (dataSpan -> OPENSPAN .)
    CONTENT         shift and go to state 15

  ! CLOSESPAN       [ reduce using rule 22 (dataSpan -> OPENSPAN .) ]

    dataContent                    shift and go to state 22

state 12

    (23) dataSpan -> CLOSESPAN .

    OPENSPAN        reduce using rule 23 (dataSpan -> CLOSESPAN .)
    CLOSESPAN       reduce using rule 23 (dataSpan -> CLOSESPAN .)
    CLOSEHREF       reduce using rule 23 (dataSpan -> CLOSESPAN .)
    OPENHREF        reduce using rule 23 (dataSpan -> CLOSESPAN .)
    CLOSEH2         reduce using rule 23 (dataSpan -> CLOSESPAN .)
    CLOSEH3         reduce using rule 23 (dataSpan -> CLOSESPAN .)


state 13

    (31) handleheader -> OPENH3 OPENSPAN . CONTENT CLOSESPAN dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH3

    CONTENT         shift and go to state 23


state 14

    (27) dataCell -> OPENPARA dataContent . dataHREF dataContent dataHREF CLOSEPARA
    (28) dataCell -> OPENPARA dataContent . dataHREF CLOSEPARA
    (24) dataHREF -> . OPENHREF dataContent CLOSEHREF
    (25) dataHREF -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (26) dataHREF -> . OPENHREF dataSpan CLOSEHREF

    OPENHREF        shift and go to state 19

    dataHREF                       shift and go to state 24

state 15

    (4) dataContent -> CONTENT .
    (5) dataContent -> CONTENT . CONTENT
    (6) dataContent -> CONTENT . CONTENT CONTENT
    (7) dataContent -> CONTENT . CONTENT CONTENT CONTENT
    (8) dataContent -> CONTENT . CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> CONTENT . CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> CONTENT . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT

  ! shift/reduce conflict for CONTENT resolved as shift
    OPENHREF        reduce using rule 4 (dataContent -> CONTENT .)
    CLOSESPAN       reduce using rule 4 (dataContent -> CONTENT .)
    CLOSELI         reduce using rule 4 (dataContent -> CONTENT .)
    CONTENT         shift and go to state 25

  ! CONTENT         [ reduce using rule 4 (dataContent -> CONTENT .) ]


state 16

    (14) dataLI -> OPENLI reLI . CLOSELI dataLI

    CLOSELI         shift and go to state 26


state 17

    (11) reLI -> dataContent . dataHREF reLI
    (24) dataHREF -> . OPENHREF dataContent CLOSEHREF
    (25) dataHREF -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (26) dataHREF -> . OPENHREF dataSpan CLOSEHREF

    OPENHREF        shift and go to state 19

    dataHREF                       shift and go to state 27

state 18

    (12) reLI -> dataHREF . dataContent reLI
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT

    CONTENT         shift and go to state 15

    dataContent                    shift and go to state 28

state 19

    (24) dataHREF -> OPENHREF . dataContent CLOSEHREF
    (25) dataHREF -> OPENHREF . CONTENT CONTENT CONTENT CLOSEHREF
    (26) dataHREF -> OPENHREF . dataSpan CLOSEHREF
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (20) dataSpan -> . OPENSPAN CLOSESPAN
    (21) dataSpan -> . OPENSPAN dataContent CLOSESPAN
    (22) dataSpan -> . OPENSPAN
    (23) dataSpan -> . CLOSESPAN

    CONTENT         shift and go to state 30
    OPENSPAN        shift and go to state 11
    CLOSESPAN       shift and go to state 12

    dataContent                    shift and go to state 29
    dataSpan                       shift and go to state 31

state 20

    (30) handleheader -> OPENH2 dataSpan dataSpan . dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH2
    (20) dataSpan -> . OPENSPAN CLOSESPAN
    (21) dataSpan -> . OPENSPAN dataContent CLOSESPAN
    (22) dataSpan -> . OPENSPAN
    (23) dataSpan -> . CLOSESPAN

    OPENSPAN        shift and go to state 11
    CLOSESPAN       shift and go to state 12

    dataSpan                       shift and go to state 32

state 21

    (20) dataSpan -> OPENSPAN CLOSESPAN .

    OPENSPAN        reduce using rule 20 (dataSpan -> OPENSPAN CLOSESPAN .)
    CLOSESPAN       reduce using rule 20 (dataSpan -> OPENSPAN CLOSESPAN .)
    CLOSEHREF       reduce using rule 20 (dataSpan -> OPENSPAN CLOSESPAN .)
    OPENHREF        reduce using rule 20 (dataSpan -> OPENSPAN CLOSESPAN .)
    CLOSEH2         reduce using rule 20 (dataSpan -> OPENSPAN CLOSESPAN .)
    CLOSEH3         reduce using rule 20 (dataSpan -> OPENSPAN CLOSESPAN .)


state 22

    (21) dataSpan -> OPENSPAN dataContent . CLOSESPAN

    CLOSESPAN       shift and go to state 33


state 23

    (31) handleheader -> OPENH3 OPENSPAN CONTENT . CLOSESPAN dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH3

    CLOSESPAN       shift and go to state 34


state 24

    (27) dataCell -> OPENPARA dataContent dataHREF . dataContent dataHREF CLOSEPARA
    (28) dataCell -> OPENPARA dataContent dataHREF . CLOSEPARA
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT

    CLOSEPARA       shift and go to state 36
    CONTENT         shift and go to state 15

    dataContent                    shift and go to state 35

state 25

    (5) dataContent -> CONTENT CONTENT .
    (6) dataContent -> CONTENT CONTENT . CONTENT
    (7) dataContent -> CONTENT CONTENT . CONTENT CONTENT
    (8) dataContent -> CONTENT CONTENT . CONTENT CONTENT CONTENT
    (9) dataContent -> CONTENT CONTENT . CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> CONTENT CONTENT . CONTENT CONTENT CONTENT CONTENT CONTENT

  ! shift/reduce conflict for CONTENT resolved as shift
    OPENHREF        reduce using rule 5 (dataContent -> CONTENT CONTENT .)
    CLOSESPAN       reduce using rule 5 (dataContent -> CONTENT CONTENT .)
    CLOSELI         reduce using rule 5 (dataContent -> CONTENT CONTENT .)
    CONTENT         shift and go to state 37

  ! CONTENT         [ reduce using rule 5 (dataContent -> CONTENT CONTENT .) ]


state 26

    (14) dataLI -> OPENLI reLI CLOSELI . dataLI
    (14) dataLI -> . OPENLI reLI CLOSELI dataLI
    (15) dataLI -> .

    OPENLI          shift and go to state 9
    $end            reduce using rule 15 (dataLI -> .)

    dataLI                         shift and go to state 38

state 27

    (11) reLI -> dataContent dataHREF . reLI
    (11) reLI -> . dataContent dataHREF reLI
    (12) reLI -> . dataHREF dataContent reLI
    (13) reLI -> .
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (24) dataHREF -> . OPENHREF dataContent CLOSEHREF
    (25) dataHREF -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (26) dataHREF -> . OPENHREF dataSpan CLOSEHREF

    CLOSELI         reduce using rule 13 (reLI -> .)
    CONTENT         shift and go to state 15
    OPENHREF        shift and go to state 19

    dataContent                    shift and go to state 17
    dataHREF                       shift and go to state 18
    reLI                           shift and go to state 39

state 28

    (12) reLI -> dataHREF dataContent . reLI
    (11) reLI -> . dataContent dataHREF reLI
    (12) reLI -> . dataHREF dataContent reLI
    (13) reLI -> .
    (4) dataContent -> . CONTENT
    (5) dataContent -> . CONTENT CONTENT
    (6) dataContent -> . CONTENT CONTENT CONTENT
    (7) dataContent -> . CONTENT CONTENT CONTENT CONTENT
    (8) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
    (24) dataHREF -> . OPENHREF dataContent CLOSEHREF
    (25) dataHREF -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (26) dataHREF -> . OPENHREF dataSpan CLOSEHREF

    CLOSELI         reduce using rule 13 (reLI -> .)
    CONTENT         shift and go to state 15
    OPENHREF        shift and go to state 19

    dataHREF                       shift and go to state 18
    dataContent                    shift and go to state 17
    reLI                           shift and go to state 40

state 29

    (24) dataHREF -> OPENHREF dataContent . CLOSEHREF

    CLOSEHREF       shift and go to state 41


state 30

    (25) dataHREF -> OPENHREF CONTENT . CONTENT CONTENT CLOSEHREF
    (4) dataContent -> CONTENT .
    (5) dataContent -> CONTENT . CONTENT
    (6) dataContent -> CONTENT . CONTENT CONTENT
    (7) dataContent -> CONTENT . CONTENT CONTENT CONTENT
    (8) dataContent -> CONTENT . CONTENT CONTENT CONTENT CONTENT
    (9) dataContent -> CONTENT . CONTENT CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> CONTENT . CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT

    CONTENT         shift and go to state 42
    CLOSEHREF       reduce using rule 4 (dataContent -> CONTENT .)


state 31

    (26) dataHREF -> OPENHREF dataSpan . CLOSEHREF

    CLOSEHREF       shift and go to state 43


state 32

    (30) handleheader -> OPENH2 dataSpan dataSpan dataSpan . dataSpan dataHREF dataSpan dataSpan CLOSEH2
    (20) dataSpan -> . OPENSPAN CLOSESPAN
    (21) dataSpan -> . OPENSPAN dataContent CLOSESPAN
    (22) dataSpan -> . OPENSPAN
    (23) dataSpan -> . CLOSESPAN

    OPENSPAN        shift and go to state 11
    CLOSESPAN       shift and go to state 12

    dataSpan                       shift and go to state 44

state 33

    (21) dataSpan -> OPENSPAN dataContent CLOSESPAN .

    OPENSPAN        reduce using rule 21 (dataSpan -> OPENSPAN dataContent CLOSESPAN .)
    CLOSESPAN       reduce using rule 21 (dataSpan -> OPENSPAN dataContent CLOSESPAN .)
    CLOSEHREF       reduce using rule 21 (dataSpan -> OPENSPAN dataContent CLOSESPAN .)
    OPENHREF        reduce using rule 21 (dataSpan -> OPENSPAN dataContent CLOSESPAN .)
    CLOSEH2         reduce using rule 21 (dataSpan -> OPENSPAN dataContent CLOSESPAN .)
    CLOSEH3         reduce using rule 21 (dataSpan -> OPENSPAN dataContent CLOSESPAN .)


state 34

    (31) handleheader -> OPENH3 OPENSPAN CONTENT CLOSESPAN . dataSpan dataSpan dataHREF dataSpan dataSpan CLOSEH3
    (20) dataSpan -> . OPENSPAN CLOSESPAN
    (21) dataSpan -> . OPENSPAN dataContent CLOSESPAN
    (22) dataSpan -> . OPENSPAN
    (23) dataSpan -> . CLOSESPAN

    OPENSPAN        shift and go to state 11
    CLOSESPAN       shift and go to state 12

    dataSpan                       shift and go to state 45

state 35

    (27) dataCell -> OPENPARA dataContent dataHREF dataContent . dataHREF CLOSEPARA
    (24) dataHREF -> . OPENHREF dataContent CLOSEHREF
    (25) dataHREF -> . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF
    (26) dataHREF -> . OPENHREF dataSpan CLOSEHREF

    OPENHREF        shift and go to state 19

    dataHREF                       shift and go to state 46

state 36

    (28) dataCell -> OPENPARA dataContent dataHREF CLOSEPARA .

    $end            reduce using rule 28 (dataCell -> OPENPARA dataContent dataHREF CLOSEPARA .)


state 37

    (6) dataContent -> CONTENT CONTENT CONTENT .
    (7) dataContent -> CONTENT CONTENT CONTENT . CONTENT
    (8) dataContent -> CONTENT CONTENT CONTENT . CONTENT CONTENT
    (9) dataContent -> CONTENT CONTENT CONTENT . CONTENT CONTENT CONTENT
    (10) dataContent -> CONTENT CONTENT CONTENT . CONTENT CONTENT CONTENT CONTENT

  ! shift/reduce conflict for CONTENT resolved as shift
    OPENHREF        reduce using rule 6 (dataContent -> CONTENT CONTENT CONTENT .)
    CLOSESPAN       reduce using rule 6 (dataContent -> CONTENT CONTENT CONTENT .)
    CLOSELI         reduce using rule 6 (dataContent -> CONTENT CONTENT CONTENT .)
    CONTENT         shift and go to state 47

  ! CONTENT         [ reduce using rule 6 (dataContent -> CONTENT CONTENT CONTENT .) ]


state 38

    (14) dataLI -> OPENLI reLI CLOSELI dataLI .

    $end            reduce using rule 14 (dataLI -> OPENLI reLI CLOSELI dataLI .)


state 39

    (11) reLI -> dataContent dataHREF reLI .

    CLOSELI         reduce using rule 11 (reLI -> dataContent dataHREF reLI .)


state 40

    (12) reLI -> dataHREF dataContent reLI .

    CLOSELI         reduce using rule 12 (reLI -> dataHREF dataContent reLI .)


state 41

    (24) dataHREF -> OPENHREF dataContent CLOSEHREF .

    CONTENT         reduce using rule 24 (dataHREF -> OPENHREF dataContent CLOSEHREF .)
    CLOSEPARA       reduce using rule 24 (dataHREF -> OPENHREF dataContent CLOSEHREF .)
    OPENHREF        reduce using rule 24 (dataHREF -> OPENHREF dataContent CLOSEHREF .)
    CLOSELI         reduce using rule 24 (dataHREF -> OPENHREF dataContent CLOSEHREF .)
    OPENSPAN        reduce using rule 24 (dataHREF -> OPENHREF dataContent CLOSEHREF .)
    CLOSESPAN       reduce using rule 24 (dataHREF -> OPENHREF dataContent CLOSEHREF .)


state 42

    (25) dataHREF -> OPENHREF CONTENT CONTENT . CONTENT CLOSEHREF
    (5) dataContent -> CONTENT CONTENT .
    (6) dataContent -> CONTENT CONTENT . CONTENT
    (7) dataContent -> CONTENT CONTENT . CONTENT CONTENT
    (8) dataContent -> CONTENT CONTENT . CONTENT CONTENT CONTENT
    (9) dataContent -> CONTENT CONTENT . CONTENT CONTENT CONTENT CONTENT
    (10) dataContent -> CONTENT CONTENT . CONTENT CONTENT CONTENT CONTENT CONTENT

    CONTENT         shift and go to state 48
    CLOSEHREF       reduce using rule 5 (dataContent -> CONTENT CONTENT .)


state 43

    (26) dataHREF -> OPENHREF dataSpan CLOSEHREF .
